# TeNeS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  NEWS.md  README.md  index.html  make_archive.sh
docs/sphinx/: .gitignore  CMakeLists.txt
docs/sphinx/en/: CMakeLists.txt  conf.py  install.rst  make.bat
docs/sphinx/en/about/: info.rst
docs/sphinx/en/acknowledge/: index.rst
docs/sphinx/en/algorithm/: algorithms.rst  algorithms_en.rst  index.rst
docs/sphinx/en/contact/: index.rst
docs/sphinx/en/file_specification/: correlation_length_section.rst  correlation_section.rst  expert_format.rst  index.rst  input_summary.rst  observable_section.rst  output_format.rst  parameter_section.rst  simple_format.rst  standard_format.rst  tensor_section.rst
docs/sphinx/en/how_to_use/: expert_usage.rst  index.rst  simple_usage.rst  standard_usage.rst
docs/sphinx/en/source/: CMakeLists.txt  conf.py  index.rst  install.rst
docs/sphinx/en/tutorial/: 02_time_evolution.rst  03_finite_temperature.rst  index.rst  simple_tutorial-1.rst  simple_tutorial-5.rst  simple_tutorial-6.rst  simple_tutorial-7.rst  simple_tutorial-8.rst  standard_tutorial-1.rst
docs/sphinx/img/: Fig_Triangular.eps  TeNeS_logo_3.ai
docs/sphinx/ja/: CMakeLists.txt  conf.py  faq.rst  install.rst
docs/sphinx/ja/about/: info.rst
docs/sphinx/ja/algorithm/: algorithms.rst  index.rst
docs/sphinx/ja/contact/: index.rst
docs/sphinx/ja/file_specification/: correlation_length_section.rst  correlation_section.rst  expert_format.rst  index.rst  input_summary.rst  observable_section.rst  output_format.rst  parameter_section.rst  simple_format.rst  standard_format.rst  tensor_section.rst
docs/sphinx/ja/how_to_use/: expert_usage.rst  index.rst  simple_usage.rst  standard_usage.rst
docs/sphinx/ja/source/: index.rst  install.rst
docs/sphinx/ja/tutorial/: 04_magnetization.rst  06_std_model.rst  index.rst  simple_tutorial-1.rst  simple_tutorial-5.rst  simple_tutorial-6.rst  simple_tutorial-7.rst  simple_tutorial-8.rst  standard_tutorial-1.rst
src/: CMakeLists.txt  Lattice.cpp  Lattice.hpp  PEPS_Basics.hpp  PEPS_Basics_impl.hpp  PEPS_Contract_MF_impl.cpp  PEPS_Contract_MF_impl.hpp  PEPS_Contract_impl.cpp  PEPS_Contract_impl.hpp  PEPS_Parameters.cpp  PEPS_Parameters.hpp  Parameters.cpp  Parameters.hpp  SquareLattice.cpp  SquareLattice.hpp  Square_lattice_CTM.hpp  arnoldi.cpp  arnoldi.hpp  correlation.hpp  correlation_length.cpp  correlation_length.hpp  edge.cpp  edge.hpp  exception.hpp  hamiltonian.cpp  hamiltonian.hpp  initialize_mptensor.cpp  initialize_mptensor.hpp  load_toml.cpp  load_toml.hpp  main.cpp  main_impl.cpp  mpi.cpp  mpi.hpp  observable.cpp  observable.hpp  operator.hpp  printlevel.hpp  tenes.cpp  tenes.hpp  (+8 more)
src/find_contraction_path/: CMakeLists.txt  finder.cpp  finder.hpp
src/iTPS/: CMakeLists.txt  PEPS_Parameters.cpp  PEPS_Parameters.hpp  contraction_order.cpp  contraction_order.hpp  contraction_path.cpp  contraction_path.hpp  correlation_function.cpp  correlation_function.hpp  correlation_length.cpp  default_order.cpp  default_path.cpp  density.cpp  finite_temperature.cpp  full_update.cpp  iTPS.cpp  iTPS.hpp  load_toml.cpp  load_toml.hpp  main.cpp  main.hpp  main_make_contraction.cpp  main_optimize_contraction.cpp  make_LGS.cpp  measure.cpp  multisite_obs.cpp  onesite_obs.cpp  optimize.cpp  saveload_tensors.cpp  simple_update.cpp  tensors.cpp  time_evolution.cpp  transfer_matrix.cpp  transfer_matrix.hpp  twosite_obs.cpp
src/iTPS/core/: CMakeLists.txt  contract.hpp  contract_ctm.hpp  contract_density_ctm.hpp  contract_itps_ctm.hpp  contract_itps_mf.hpp  contract_mf.hpp  ctm.cpp  ctm.hpp  ctm_single.cpp  full_update.cpp  full_update.hpp  local_gauge.cpp  local_gauge.hpp  simple_update.cpp  simple_update.hpp
src/iTPS/core/contract_ctm/: CMakeLists.txt  contract_ctm_impl.cpp  correlation.cpp  ctm.cpp  ctm_1x1.cpp  ctm_1x2.cpp  ctm_1x3.cpp  ctm_1x4.cpp  ctm_2x1.cpp  ctm_2x2.cpp  ctm_2x3.cpp  ctm_2x4.cpp  ctm_3x1.cpp  ctm_3x2.cpp  ctm_3x3.cpp  ctm_3x4.cpp  ctm_4x1.cpp  ctm_4x2.cpp  ctm_4x3.cpp  ctm_4x4.cpp  instantiate.hpp  instantiate_ctm.hpp
src/iTPS/core/contract_density_ctm/: CMakeLists.txt  correlation.cpp  ctm.cpp  ctm_1x1.cpp  ctm_1x2.cpp  ctm_1x3.cpp  ctm_1x4.cpp  ctm_2x1.cpp  ctm_2x2.cpp  ctm_2x3.cpp  ctm_2x4.cpp  ctm_3x1.cpp  ctm_3x2.cpp  ctm_3x3.cpp  ctm_3x4.cpp  ctm_4x1.cpp  ctm_4x2.cpp  ctm_4x3.cpp  ctm_4x4.cpp  instantiate.hpp  instantiate_ctm.hpp
src/iTPS/core/contract_itps_ctm/: CMakeLists.txt  correlation.cpp  ctm.cpp  ctm_1x1.cpp  ctm_1x2.cpp  ctm_1x3.cpp  ctm_1x4.cpp  ctm_2x1.cpp  ctm_2x2.cpp  ctm_2x3.cpp  ctm_2x4.cpp  ctm_3x1.cpp  ctm_3x2.cpp  ctm_3x3.cpp  ctm_3x4.cpp  (+6 more)
src/optimize_contraction_order/: CMakeLists.txt  optimize.cpp  optimize.hpp
src/util/: CMakeLists.txt  abs.hpp  datetime.cpp  datetime.hpp  file.cpp  file.hpp  find_or.hpp  load_tensor.cpp  load_tensor.hpp  read_matrix.hpp  read_tensor.hpp  string.cpp  string.hpp  type_traits.hpp
test/: CMakeLists.txt  full_update.cpp  fulltest.py.in  fulltest.sh.in  input.cpp  restart.py.in  simple_mode.py.in  simple_update.cpp  std_mode.py.in
test/data/: AntiferroHeisenberg.toml  AntiferroHeisenberg_complex.toml  AntiferroHeisenberg_mf.toml  AntiferroHeisenberg_real.toml  FT_Kitaev.toml  FT_TFI_square.toml  Honeycomb.toml  Honeycomb_skew.toml  J1J2_AFH.toml  Kitaev.toml  RSVD.toml  TE_singlespin.toml  check_input.toml  fulltest.toml  output_simple_mode.toml  output_simple_mode_2.toml  output_std_mode.toml  restart_0.toml  restart_1.toml  simple_mode.toml  simple_mode_2.toml  std_mode.toml  std_mode_multi.toml
test/data/output_AntiferroHeisenberg_mf/: AntiferroHeisenberg_mf.toml
test/data/output_FT_TFI_square/: FT_TFI_square.toml
test/data/output_Honeycomb/: Honeycomb.toml
test/data/output_Honeycomb_skew/: Honeycomb_skew.toml
test/data/output_J1J2_AFH/: J1J2_AFH.toml
test/data/output_Kitaev/: input.toml
test/data/output_RSVD/: RSVD.toml
test/data/output_TE_TFI/: TE_TFI.toml
test/data/output_TE_singlespin/: TE_singlespin.toml
tool/: CMakeLists.txt  tenes_pre.py  tenes_simple.py  tenes_std.py
(+1194 files in other folders)
